# strands-solver

./: .gitignore  AGENTS.md  IDEAS.md  README.md  RESULTS.md  benchmark_coverer.py  common.py  common_test.py  coverer.py  coverer_test.py  dictionary.py  draw.py  experiments.ipynb  finder.py  finder_test.py  grid_coverer.py  grid_coverer_test.py  main.py  ocr.py  ocr_test.py  pyproject.toml  results.md  solver.py  solver_test.py  word_finder.py  word_finder_test.py  words.py
.claude/: settings.json
.cursor/: worktrees.json
.github/workflows/: release.yml
assets/: cursor_algo_analysis.md
data/dictionary/: README.md
experiments/: __init__.py  dictionary.ipynb  ocr.ipynb  semantic_similarity.ipynb
puzzles/: 2025-09-14.csv  2025-09-14.json  2025-09-15.csv  2025-09-15.json  2025-09-16.csv  2025-09-16.json  2025-09-17.csv  2025-09-17.json  2025-09-23.json  2025-09-23_solution.json  2025-09-28.csv  2025-09-28.json  2025-10-03.csv  2025-10-03.json  2025-10-04.json  2025-11-30.json  example.csv  example.json  example2.csv  example2.json  notes.md
report/: details.md  results.csv  results.md  summary.md
reports/: summary.csv
scripts/: compare_coverers.py  debug_cpsat.py  verify_covers.py
src/strands_solver/: cli.py  common.py  coverer.py  cpsat_coverer.py  dictionary.py  draw.py  drawing.py  embedder.py  fetcher.py  finder.py  grid_coverer.py  main.py  nyt.py  ocr.py  puzzle_fetcher.py  ranker.py  solution_ranker.py  solver.py  spangram_finder.py  word_finder.py
src/strands_solver/cli/: benchmark.py  embed.py  main.py  show.py  solve.py
src/strands_solver/scripts/: benchmark.py  embed_dictionary.py  show_solution.py
tests/: cli_test.py  common_test.py  coverer_test.py  e2e_test.py  embedder_test.py  fetcher_test.py  finder_test.py  grid_coverer_test.py  main_test.py  ocr_test.py  puzzle_fetcher_test.py  ranker_test.py  solution_ranker_test.py  solver_test.py  word_finder_test.py
tests/e2e/: cli_e2e_test.py  cli_test.py  conftest.py
tests/integration/: solve_test.py  solver_test.py
tests/unit/: common_test.py  cpsat_coverer_test.py  embedder_test.py  grid_coverer_test.py  solution_ranker_test.py  solver_test.py
